# 1brc

./: .clang-tidy  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
